CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(swanmon C)

SET(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")

FIND_LIBRARY(DAVICI_LIBRARIES NAMES davici)
FIND_PATH(DAVICI_INCLUDE_DIRS davici.h)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GLIB REQUIRED glib-2.0)
PKG_CHECK_MODULES(JSONC REQUIRED json-c)

INCLUDE_DIRECTORIES(${DAVICI_INCLUDE_DIRS} ${GLIB_INCLUDE_DIRS} ${JSONC_INCLUDE_DIRS})
LINK_DIRECTORIES(${GLIB_LIBRARY_DIRS} ${JSONC_LIBRARY_DIRS})

ADD_EXECUTABLE(swanmon main.c query.c format.c)
TARGET_LINK_LIBRARIES(swanmon ${DAVICI_LIBRARIES} ${GLIB_LIBRARIES} ${JSONC_LIBRARIES})

INSTALL(TARGETS swanmon RUNTIME DESTINATION /usr/sbin)
