CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(swanmon C)

FIND_LIBRARY(DAVICI_LIBRARIES NAMES davici)
FIND_PATH(DAVICI_INCLUDE_DIRS davici.h)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(JSONC REQUIRED json-c)

INCLUDE_DIRECTORIES(${DAVICI_INCLUDE_DIRS} ${JSONC_INCLUDE_DIRS})
LINK_DIRECTORIES(${JSONC_LIBRARY_DIRS})

ADD_EXECUTABLE(swanmon main.c query.c format.c json-stack.c)
TARGET_LINK_LIBRARIES(swanmon ${DAVICI_LIBRARIES} ${JSONC_LIBRARIES})

INSTALL(TARGETS swanmon RUNTIME DESTINATION /usr/sbin)
